<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="rc_called_accept">对方接受了通话请求</string>
    <string name="rc_called_is_calling">对方正在通话中</string>
    <string name="rc_called_not_accept">对方未接听</string>
    <string name="rc_called_on_hook">对方已挂机</string>
    <string name="rc_conversation_List_operation_failure">操作失败</string>
    <string name="rc_conversation_list_app_public_service">应用公众服务</string>
    <string name="rc_conversation_list_default_discussion_name">讨论组</string>
    <string name="rc_conversation_list_dialog_cancel_top">取消置顶</string>
    <string name="rc_conversation_list_dialog_remove">从会话列表中移除</string>
    <string name="rc_conversation_list_dialog_set_top">置顶该会话</string>
    <string name="rc_conversation_list_empty_prompt">暂无聊天信息</string>
    <string name="rc_conversation_list_my_chatroom">我的聊天室</string>
    <string name="rc_conversation_list_my_customer_service">客服列表</string>
    <string name="rc_conversation_list_my_discussion">我的讨论组</string>
    <string name="rc_conversation_list_my_group">我的群组</string>
    <string name="rc_conversation_list_my_private_conversation">我的私人会话</string>
    <string name="rc_conversation_list_not_connected">尚未连接!</string>
    <string name="rc_conversation_list_popup_cancel_top">取消置顶</string>
    <string name="rc_conversation_list_popup_set_top">已置顶</string>
    <string name="rc_conversation_list_public_service">公众服务</string>
    <string name="rc_conversation_list_system_conversation">系统消息</string>
    <string name="rc_dialog_cancel">取消</string>
    <string name="rc_dialog_item_message_copy">复制消息</string>
    <string name="rc_dialog_item_message_delete">删除消息</string>
    <string name="rc_dialog_ok">确定</string>
    <string name="rc_discussion_nt_msg_for_add">%1$s 邀请了%2$s位成员加入了讨论组</string>
    <string name="rc_discussion_nt_msg_for_added">%1$s 邀请 %2$s 加入了讨论组</string>
    <string name="rc_discussion_nt_msg_for_exit">%1$s 退出了讨论组</string>
    <string name="rc_discussion_nt_msg_for_is_open_invite_close">%1$s 关闭了成员邀请</string>
    <string name="rc_discussion_nt_msg_for_is_open_invite_open">%1$s 开放了成员邀请</string>
    <string name="rc_discussion_nt_msg_for_removed">你被 %1$s 移出了讨论组</string>
    <string name="rc_discussion_nt_msg_for_rename">%1$s 修改讨论组名称为 %2$s</string>
    <string name="rc_discussion_nt_msg_for_who_removed">%1$s 被 %2$s 移出了讨论组</string>
    <string name="rc_discussion_nt_msg_for_you">你</string>
    <string name="rc_exit_calling">是否退出通话界面？</string>
    <string name="rc_file_not_exist">文件不存在</string>
    <string name="rc_info_forbidden_to_talk">您当前在群组中被禁言</string>
    <string name="rc_info_not_in_chatroom">你不在该聊天室</string>
    <string name="rc_info_not_in_discussion">你不在该讨论组</string>
    <string name="rc_info_not_in_group">你不在该群</string>
    <string name="rc_input_send">发送</string>
    <string name="rc_input_voice">按住 说话</string>
    <string name="rc_message_content_draft">[草稿]</string>
    <string name="rc_message_content_image">[图片]</string>
    <string name="rc_message_content_location">[位置]</string>
    <string name="rc_message_content_rich_text">[图文]</string>
    <string name="rc_message_content_voice">[语音]</string>
    <string name="rc_message_unknown">当前版本暂不支持查看此消息</string>
    <string name="rc_message_unread_count">···</string>
    <string name="rc_name">融云</string>
    <string name="rc_network_error">网络连接错误</string>
    <string name="rc_network_exception">网络异常请稍后再试</string>
    <string name="rc_network_is_busy">网络繁忙</string>
    <string name="rc_notice_connecting">正在连接服务器</string>
    <string name="rc_notice_create_discussion">正在创建讨论组</string>
    <string name="rc_notice_create_discussion_fail">创建讨论组失败</string>
    <string name="rc_notice_data_is_loading">数据加载中</string>
    <string name="rc_notice_disconnect">无法连接到服务器</string>
    <string name="rc_notice_download_fail">下载失败!</string>
    <string name="rc_notice_enter_chatroom">进入聊天室</string>
    <string name="rc_notice_input_conversation_error">会话尚未创建</string>
    <string name="rc_notice_load_data_fail">获取数据失败</string>
    <string name="rc_notice_network_unavailable">当前网络不可用</string>
    <string name="rc_notice_select_one_picture_at_last">请至少选择一张图片</string>
    <string name="rc_notice_tick">该账号已经在其他设备登录</string>
    <string name="rc_notification_contact">个联系人</string>
    <string name="rc_notification_msg">条消息</string>
    <string name="rc_notification_send">发来了</string>
    <string name="rc_notification_ticker_text">您有了一条新消息</string>
    <string name="rc_plugins_camera">相机</string>
    <string name="rc_plugins_image">图片</string>
    <string name="rc_plugins_location">位置</string>
    <string name="rc_plugins_voip">语音通话</string>
    <string name="rc_pub_service_info_account">公众号：%1$s</string>
    <string name="rc_pub_service_info_description">功能介绍</string>
    <string name="rc_pub_service_info_enter">进入公众号</string>
    <string name="rc_pub_service_info_follow">关注</string>
    <string name="rc_pub_service_info_unfollow">取消关注</string>
    <string name="rc_read_all">阅读全文</string>
    <string name="rc_rejected_by_blacklist_prompt">您的消息已经发出，但被对方拒收</string>
    <string name="rc_send_format">发送(%1$s)</string>
    <string name="rc_setting_clear_msg_fail">清空聊天失败</string>
    <string name="rc_setting_clear_msg_name">清空聊天信息</string>
    <string name="rc_setting_clear_msg_prompt">你确定要清空聊天消息吗?</string>
    <string name="rc_setting_clear_msg_success">清空聊天成功</string>
    <string name="rc_setting_conversation_notify">新消息通知</string>
    <string name="rc_setting_conversation_notify_fail">设置新消息通知失败</string>
    <string name="rc_setting_get_conversation_notify_fail">获取新消息通知失败</string>
    <string name="rc_setting_name">设置</string>
    <string name="rc_setting_set_top">置顶</string>
    <string name="rc_setting_set_top_fail">设置置顶失败</string>
    <string name="rc_voice_cancel">松开手指，取消发送</string>
    <string name="rc_voice_dialog_cancel_send">松开手指，取消发送</string>
    <string name="rc_voice_dialog_swipe">手指上滑，取消发送</string>
    <string name="rc_voice_dialog_time_short">说话时间太短</string>
    <string name="rc_voice_failure">录音失败！</string>
    <string name="rc_voice_rec">手指上滑，取消发送</string>
    <string name="rc_voice_short">录音时间太短</string>
    <string name="about_us">关于Max+</string>
    <string name="anonymous_player">匿名玩家</string>
    <string name="clear_cache">清除缓存</string>
    <string name="data">数据</string>
    <string name="discovery">发现</string>
    <string name="hero">英雄</string>
    <string name="hero_rank">英雄榜</string>
    <string name="item">物品</string>
    <string name="ladder">天梯</string>
    <string name="league">联赛</string>
    <string name="logout">登出</string>
    <string name="manage_acount">管理角色</string>
    <string name="maxid_empty">Max ID : 000000</string>
    <string name="me">我</string>
    <string name="professional_data">职业数据</string>
    <string name="switch_game">切换游戏</string>
    <string name="video">视频</string>
    <string name="vip_center">会员中心</string>
</resources>